19 Sep 2006 Added RO and NORING as synonyms for READONLY tape config option;
            fixed compilation if SCSI not supported - Jay Maynard
15 Sep 2006 PR# misc/96: fix premature .RC processing wrt CPUSTATE - Fish
06 Sep 2006 Win32 PCRE (Perl-Compatible Regular Expression) support - Fish
31 Aug 2006 Support emulating 3590 SCSI as 3480/3490's and vice versa - Fish
31 Aug 2006 Preliminary support for 3590 (partial and very incomplete) - Fish
24 Aug 2006 Set Windows default thread priorities same as other hosts - Fish
24 Aug 2006 Fix some addtl SCSI tape status related bugs [of my own!] - Fish
19 Aug 2006 Fix auto-scsi-mount bug causing too frequent drive queries - Fish
16 Aug 2006 C99 flexible arrays support - Fish
05 Aug 2006 Added addressing mode in panel - Bernard van der Helm
03 Aug 2006 Add official support for 3590 tape device types using 32-bit
            block-ids affecting LOCATE BLOCK, etc / BOT detection - Fish
03 Aug 2006 New conspawn keyword: 'startgui' to start Windows GUI
            application via ShellExecute to prevent hang at exit - Fish
01 Aug 2006 PR# misc/94: Sporadic missed .RC file processing - Fish
21 Jul 2006 Small change to ECPS:VM fix by P. Coghlan - Ivan Warren
21 Jul 2006 Several small bugfixes from Peter Coghlan - Jay Maynard
21 Jul 2006 read_socket and write_socket wrapper routines to fix short
            read problems for sockdev card readers (new source file
            hsocket.c) - Robert Styma and Jay Maynard
02 Jul 2006 PR# network/93: honor specified CTCI-W32 buffer sizes - Fish
28 Jun 2006 Fix doubled/duplicated startup 'version' logmsgs caused by
            PR# misc/87 when Herc is run in daemon/hercgui mode  - Fish
25 Jun 2006 Fix seq dasdload blksize pad bug - Peter Sylvester
            [peter.sylvester@edelweb.fr] by Fish
23 Jun 2006 PR#s misc/21 and PR# network/62: HTTP Server: do 'shutdown'
            to gracefully close connection before closing the socket - Fish